<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.MainActivity"
    android:padding="30dp"
    android:background="@color/background_color">

    <androidx.cardview.widget.CardView
        android:id="@+id/heightCardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:cardCornerRadius="24dp"
        app:cardBackgroundColor="@color/primary_color_light"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="8dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/height_label"
                android:textSize="24sp"
                />

            <TextView
                android:id="@+id/heightTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/height_text"
                android:textSize="30sp"
                android:layout_marginVertical="16dp"
                />

            <com.google.android.material.slider.Slider
                android:id="@+id/heightSlider"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:labelBehavior="gone"
                app:tickVisible="false"
                android:valueFrom="100"
                android:valueTo="240"
                android:stepSize="1"/>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/weightCardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/heightCardView"
        app:layout_constraintStart_toStartOf="parent"
        app:cardCornerRadius="24dp"
        app:cardBackgroundColor="@color/primary_color_light"
        android:layout_marginTop="16dp"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="8dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/weight_label"
                android:textSize="24sp"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintTop_toBottomOf="@id/weightTextView"
                app:layout_constraintStart_toStartOf="parent"
                android:gravity="center">

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/subWeightFab"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:src="@drawable/minus_icon"
                    app:fabCustomSize="50dp"
                    />

                <TextView
                    android:id="@+id/weightTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/weight_text"
                    android:textSize="30sp"
                    android:layout_marginVertical="16dp"
                    android:layout_weight="1"
                    />

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/addWeightFab"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:src="@drawable/add_icon"
                    app:fabCustomSize="50dp"
                    />

            </LinearLayout>
        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/weightCardView"
        app:layout_constraintBottom_toTopOf="@id/calculateButton"
        app:layout_constraintStart_toStartOf="parent"
        app:cardCornerRadius="24dp"
        app:cardBackgroundColor="@color/primary_color_light"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center">

            <TextView
                android:id="@+id/descriptionTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:text="Descripción"
                android:textSize="30sp"
                android:gravity="center"
                android:layout_marginBottom="20dp"
                />

            <TextView
                android:id="@+id/resultTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="20.5"
                android:textSize="50sp"
                android:textStyle="bold"
                android:gravity="center"
                android:paddingVertical="16dp"
                />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/calculateButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/calculate_text"
        android:textSize="32sp"
        android:paddingHorizontal="32dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

</androidx.constraintlayout.widget.ConstraintLayout>